--- a/src/components/cashier/cashier.component.html
+++ b/src/components/cashier/cashier.component.html
@@ -119,7 +119,7 @@
               <div class="flex-1 grid grid-cols-3 sm:grid-cols-4 gap-2 overflow-y-auto pr-2 items-start">
                  @for (recipe of filteredRecipes(); track recipe.id) {
                   <div (click)="addToCart(recipe)" 
-                       class="bg-gray-700 p-3 rounded-lg text-center flex flex-col transition-opacity"
+                       class="bg-gray-700 p-3 rounded-lg text-center flex flex-col justify-center h-24 transition-opacity"
                        [class.cursor-pointer]="recipe.hasStock"
                        [class.hover:bg-gray-600]="recipe.hasStock"
                        [class.opacity-50]="!recipe.hasStock"
